# itis-9xx-fp-fall-2022

./: .gitignore  README.md  extra.md
proj1/: CHANGELOG.md  proj1.cabal
proj1/app/: Main.hs
proj2/: CHANGELOG.md  proj2.cabal
proj2/app/: Main.hs
proj3/: CHANGELOG.md  proj3.cabal
proj3/app/: Main.hs
proj4/: CHANGELOG.md  proj4.cabal
proj4/app/: Main.hs
